--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "silex/silex": "~2.0",
         "twbs/bootstrap": "^3.3",
-        "twig/twig": "^1.31"
+        "twig/twig": "^1.31",
+        "doctrine/dbal": "~2.2"
     }
 }
