--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "silex/silex": "~2.0",
         "twbs/bootstrap": "^3.3",
         "twig/twig": "^1.31",
-        "doctrine/dbal": "~2.2"
+        "doctrine/dbal": "~2.2",
+        "symfony/var-dumper": "^3.2"
     }
 }
