added login mechanisms

--- a/config/config.php.example
+++ b/config/config.php.example
@@ -4,3 +4,4 @@ $miu_config['db_host'] = '127.0.0.1';
 $miu_config['db_dbase'] = 'miubase';
 $miu_config['db_username'] = 'replacewithaname';
 $miu_config['db_password'] = 'replacewithapassword';
+$miu_config['admin_email'] = 'example@test.com'
